# treesitter-mcp

./: .cargo-mutants.toml  .gitignore  AGENTS.md  BENCHMARK.md  Cargo.toml  FUTURE.md  IDEAS.md  LICENSE  LLM_IMPROVEMENTS.md  PLAN.md  README.md  TESTING_GUIDE.md  TEST_IMPROVEMENT_PLAN.md  coverage.sh  test_metrics.sh
Formula/: treesitter-mcp.rb
benches/: dependency_resolution_bench.rs  find_usages_bench.rs  parse_bench.rs
docs/: COMMUNICATION.md
scripts/: render_token_benchmark_summary.sh
src/: handler.rs  lib.rs  main.rs  mcp_types.rs  tools.rs
src/common/: mod.rs  (+5 more)
tests/: askama_template_context_test.rs  batch_usage_test.rs  call_graph_test.rs  code_map_tool_test.rs  complex_project_test.rs  cross_language_test.rs  csharp_language_test.rs  css_extraction_test.rs  debug_java_ast.rs  dependencies_test.rs  diff_tool_test.rs  error_recovery_test.rs  file_shape_removal_test.rs  file_shape_swift_test.rs  file_shape_tool_test.rs  find_usages_max_context_test.rs  find_usages_tool_test.rs  fixture_helpers_test.rs  format_diagnostics_test.rs  format_references_test.rs  get_context_test.rs  get_context_test.rs.deprecated  get_node_at_position_test.rs  get_node_at_position_test.rs.deprecated  go_language_test.rs  html_extraction_test.rs  java_language_test.rs  json_rpc_io_test.rs  json_rpc_test.rs  json_rpc_test.rs.bak  kotlin_language_test.rs  language_name_test.rs  llm_agent_workflows_test.rs  mcp_lifecycle_test.rs  mcp_types_test.rs  mcp_types_test.rs.bak  minimal_edit_context_test.rs  parse_file_deps_test.rs  parse_file_include_code_test.rs  parse_file_tool_test.rs  (+30 more)
(+93 files in other folders)
