[package]
name = "treesitter-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP and JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tree-sitter core
tree-sitter = "0.23"

# Language grammars
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"

# Error handling
eyre = "0.6"
color-eyre = "0.6"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
